--- a/projects/_posts/2023-07-21-scrape-DCP.html
+++ b/projects/_posts/2023-07-21-scrape-DCP.html
@@ -11,11 +11,13 @@ header:
  teaser: /assets/images/python-svgrepo-com.svg
 ---
 
-<h1>Scraping Toastmasters Club Performance data with Python</h1>
+<h2 id="project_summary">Summary:</h2>
+<p>Toastmasters International makes club performance data publicly available on a web dashboard. I used Python and the Beautiful Soup library to collect 
+current and historical monthly data and save the data to CSV files, one for each Toastmasters program year. I then uploaded the CSV files to Google Cloud
+ Storage and made the files publicly available. 
 
 <a id="contents"></a><h2>Contents:</h2>
 <ul>
-<li><a href="#project_summary">Project Summary</a></li>
 <li><a href="#aboutTMandDCP">About Toastmasters and the Distinguished Club Program</a>
   <ul>
     <li><a href="#TM_clubs_and_districts">Toastmasters Clubs and Districts</a></li>
@@ -50,11 +52,6 @@ header:
   </ul>
 </li>
 </ul>
-
-<h2 id="project_summary">Project Summary</h2>
-<p>Toastmasters International makes club performance data publicly available on a web dashboard. I used Python and the Beautiful Soup library to collect 
-current and historical monthly data and save the data to CSV files, one for each Toastmasters program year. I then uploaded the CSV files to Google Cloud
- Storage and made the files publicly available. 
 
 <h2 id="aboutTMandDCP">About Toastmasters and the Distinguished Club Program</h2>
 <h3 id="TM_clubs_and_districts">Toastmasters Clubs and Districts</h3>
