Update project summary to improve excerpt

--- a/projects/_posts/2023-07-21-scrape-DCP.html
+++ b/projects/_posts/2023-07-21-scrape-DCP.html
@@ -12,8 +12,7 @@ header:
 ---
 
 <h2 id="project_summary">Summary:</h2>
-<p>Toastmasters International makes club performance data publicly available on a web dashboard. I used Python and the Beautiful Soup library to collect 
-current and historical monthly data and save the data to CSV files, one for each Toastmasters program year. I then uploaded the CSV files to Google Cloud
+<p>I scraped current and historical monthly data from the Toastmasters Club Performance dashboard and saved the data to CSV files.<!--more--> I then uploaded the CSV files to Google Cloud
  Storage and made the files publicly available.</p>
 
 <a id="contents"></a><h2>Contents:</h2>
