Fix internal link to #making_data_available

--- a/projects/_posts/2023-07-21-scrape-DCP.html
+++ b/projects/_posts/2023-07-21-scrape-DCP.html
@@ -47,7 +47,7 @@ header:
       <li><a href="#wrapping_up">Wrapping Up</a></li>
     </ul>
     </li>
-    <li><a href="making_data_available">Making the data publicly available in Google Cloud Storage</a></li>
+    <li><a href="#making_data_available">Making the data publicly available in Google Cloud Storage</a></li>
   </ul>
 </li>
 </ul>
